--- a/audiovisual.html
+++ b/audiovisual.html
@@ -76,23 +76,23 @@
 									<div class="orb-g-30 orb-sm-100">
 										<div class="orb-position-fix">
 											<div class="orb-slide-caption" data-swiper-parallax-y="120" data-swiper-parallax-scale="0.5">
-												<span>Moda <br><b>XQ Wearing</b><br>Divulgação de marca</span></div>
+												<span>Audiovisual <br><b>Elton Moura</b><br></span></div>
 											<div class="orb-photo-frame orb-obj-1" data-swiper-parallax-y="-100" data-swiper-parallax-scale="0.5" data-swiper-parallax-duration="1250">
-												<img src="img/photo/works/moda/xq-capa3.png" alt="photo">
-												<a data-fancybox="gallery" data-no-swup href="img/photo/works/moda/xq-capa3-extended.png" class="orb-zoom"><img src="img/ui/zoom.svg" alt="zoom"></a>
+												<img src="img/photo/works/audio/visual1.png" alt="photo">
+												<a data-fancybox="gallery" data-no-swup href="https://www.youtube.com/embed/3WpKyi_d8eo" class="orb-zoom"><img src="img/ui/play-button.svg" alt="zoom"></a>
 											</div>
 										</div>
 									</div>
 									<div class="orb-g-50 orb-sm-100">
 										<div class="orb-photo-frame orb-obj-2" data-swiper-parallax-y="60" data-swiper-parallax-scale="0.5" data-swiper-parallax-duration="1300">
-											<img src="img/photo/works/moda/xq-capa1.png" alt="photo">
-											<a data-fancybox="gallery" data-no-swup href="img/photo/works/moda/xq-capa1-extended.png" class="orb-zoom"><img src="img/ui/zoom.svg" alt="zoom"></a>
+											<img src="img/photo/works/audio/visual2.png" alt="photo">
+											<a data-fancybox="gallery" data-no-swup href="https://www.youtube.com/embed/T9wwz5Ruqno" class="orb-zoom"><img src="img/ui/play-button.svg" alt="zoom"></a>
 										</div>
 									</div>
 									<div class="orb-g-20 orb-sm-100">
 										<div class="orb-photo-frame orb-obj-3" data-swiper-parallax-y="-100" data-swiper-parallax-scale="0.5" data-swiper-parallax-duration="1200">
-											<img src="img/photo/works/moda/xq-foto1.png" alt="photo">
-											<a data-fancybox="gallery" data-no-swup href="img/photo/works/moda/xq-foto1-extended.png" class="orb-zoom"><img src="img/ui/zoom.svg" alt="zoom"></a>
+											<img src="img/photo/works/audio/visual3.png" alt="photo">
+											<a data-fancybox="gallery" data-no-swup href="https://www.youtube.com/embed/_P9cG0JDgis" class="orb-zoom"><img src="img/ui/play-button.svg" alt="zoom"></a>
 										</div>
 									</div>
 								</div>
@@ -102,101 +102,49 @@
 							<div class="orb-content" data-swiper-parallax="-200" data-swiper-parallax-opacity="0">
 								<div class="orb-grid">
 									<div class="orb-g-30 orb-sm-100">
-										<div class="orb-position-fix">										
+										<div class="orb-position-fix">
 											<div class="orb-photo-frame orb-obj-1" data-swiper-parallax-y="-100" data-swiper-parallax-scale="0.5" data-swiper-parallax-duration="1250">
-												<img src="img/photo/works/moda/xq-capa2.png" alt="photo">
-												<a data-fancybox="gallery" data-no-swup href="img/photo/works/moda/xq-capa2-extended.png" class="orb-zoom"><img src="img/ui/zoom.svg" alt="zoom"></a>
+												<img src="img/photo/works/audio/visual4.png" alt="photo">
+												<a data-fancybox="gallery" data-no-swup href="https://www.youtube.com/embed/ekPT6WG_K7U" class="orb-zoom"><img src="img/ui/play-button.svg" alt="zoom"></a>
 											</div>
 										</div>
 									</div>
 									<div class="orb-g-50 orb-sm-100">
 										<div class="orb-photo-frame orb-obj-2" data-swiper-parallax-y="60" data-swiper-parallax-scale="0.5" data-swiper-parallax-duration="1300">
-											<img src="img/photo/works/moda/xq2-elton.png" alt="photo">
-											<a data-fancybox="gallery" data-no-swup href="img/photo/works/moda/xq2-elton.png" class="orb-zoom"><img src="img/ui/zoom.svg" alt="zoom"></a>
+											<img src="img/photo/works/audio/visual5.png" alt="photo">
+											<a data-fancybox="gallery" data-no-swup href="https://www.youtube.com/embed/pmUcgf9B-YY" class="orb-zoom"><img src="img/ui/play-button.svg" alt="zoom"></a>
 										</div>
 									</div>
 									<div class="orb-g-20 orb-sm-100">
 										<div class="orb-photo-frame orb-obj-3" data-swiper-parallax-y="-100" data-swiper-parallax-scale="0.5" data-swiper-parallax-duration="1200">
-											<img src="img/photo/works/moda/xq-foto2.png" alt="photo">
-											<a data-fancybox="gallery" data-no-swup href="img/photo/works/moda/xq-foto2-extended.png" class="orb-zoom"><img src="img/ui/zoom.svg" alt="zoom"></a>
+											<img src="img/photo/works/audio/visual6.png" alt="photo">
+											<a data-fancybox="gallery" data-no-swup href="https://www.youtube.com/embed/6P_5mjzWNjQ" class="orb-zoom"><img src="img/ui/play-button.svg" alt="zoom"></a>
 										</div>
 									</div>
 								</div>
 							</div>
 						</div>
-						<div class="swiper-slide">
+                        <div class="swiper-slide">
 							<div class="orb-content" data-swiper-parallax="-200" data-swiper-parallax-opacity="0">
 								<div class="orb-grid">
 									<div class="orb-g-30 orb-sm-100">
-										<div class="orb-position-fix">										
+										<div class="orb-position-fix">
 											<div class="orb-photo-frame orb-obj-1" data-swiper-parallax-y="-100" data-swiper-parallax-scale="0.5" data-swiper-parallax-duration="1250">
-												<img src="img/photo/works/moda/xq-foto4.png" alt="photo">
-												<a data-fancybox="gallery" data-no-swup href="img/photo/works/moda/xq-foto4-extended.png" class="orb-zoom"><img src="img/ui/zoom.svg" alt="zoom"></a>
+												<img src="img/photo/works/audio/visual7.png" alt="photo">
+												<a data-fancybox="gallery" data-no-swup href="https://www.youtube.com/embed/QOtliL6OycE" class="orb-zoom"><img src="img/ui/play-button.svg" alt="zoom"></a>
 											</div>
 										</div>
 									</div>
 									<div class="orb-g-50 orb-sm-100">
 										<div class="orb-photo-frame orb-obj-2" data-swiper-parallax-y="60" data-swiper-parallax-scale="0.5" data-swiper-parallax-duration="1300">
-											<img src="img/photo/works/moda/xq-foto3.png" alt="photo">
-											<a data-fancybox="gallery" data-no-swup href="img/photo/works/moda/xq-foto3-extended.png" class="orb-zoom"><img src="img/ui/zoom.svg" alt="zoom"></a>
+											<img src="img/photo/works/audio/visual8.png" alt="photo">
+											<a data-fancybox="gallery" data-no-swup href="https://www.youtube.com/embed/WLkVmb-5rc0" class="orb-zoom"><img src="img/ui/play-button.svg" alt="zoom"></a>
 										</div>
 									</div>
 									<div class="orb-g-20 orb-sm-100">
 										<div class="orb-photo-frame orb-obj-3" data-swiper-parallax-y="-100" data-swiper-parallax-scale="0.5" data-swiper-parallax-duration="1200">
-											<img src="img/photo/works/moda/xq-foto5.png" alt="photo">
-											<a data-fancybox="gallery" data-no-swup href="img/photo/works/moda/xq-foto5-extended.png" class="orb-zoom"><img src="img/ui/zoom.svg" alt="zoom"></a>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="swiper-slide">
-							<div class="orb-content" data-swiper-parallax="-200" data-swiper-parallax-opacity="0">
-								<div class="orb-grid">
-									<div class="orb-g-30 orb-sm-100">
-										<div class="orb-position-fix">										
-											<div class="orb-photo-frame orb-obj-1" data-swiper-parallax-y="-100" data-swiper-parallax-scale="0.5" data-swiper-parallax-duration="1250">
-												<img src="img/photo/works/moda/xq-foto6.png" alt="photo">
-												<a data-fancybox="gallery" data-no-swup href="img/photo/works/moda/xq-foto6-extended.png" class="orb-zoom"><img src="img/ui/zoom.svg" alt="zoom"></a>
-											</div>
-										</div>
-									</div>
-									<div class="orb-g-50 orb-sm-100">
-										<div class="orb-photo-frame orb-obj-2" data-swiper-parallax-y="60" data-swiper-parallax-scale="0.5" data-swiper-parallax-duration="1300">
-											<img src="img/photo/works/moda/xq-foto7.png" alt="photo">
-											<a data-fancybox="gallery" data-no-swup href="img/photo/works/moda/xq-foto7-extended.png" class="orb-zoom"><img src="img/ui/play-button.svg" alt="zoom"></a>
-										</div>
-									</div>
-									<div class="orb-g-20 orb-sm-100">
-										<div class="orb-photo-frame orb-obj-3" data-swiper-parallax-y="-100" data-swiper-parallax-scale="0.5" data-swiper-parallax-duration="1200">
-											<img src="img/photo/works/moda/xq-foto8.png" alt="photo">
-											<a data-fancybox="gallery" data-no-swup href="img/photo/works/moda/xq-foto8-extended.png" class="orb-zoom"><img src="img/ui/zoom.svg" alt="zoom"></a>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="swiper-slide">
-							<div class="orb-content" data-swiper-parallax="-200" data-swiper-parallax-opacity="0">
-								<div class="orb-grid">
-									<div class="orb-g-30 orb-sm-100">
-										<div class="orb-position-fix">										
-											<div class="orb-photo-frame orb-obj-1" data-swiper-parallax-y="-100" data-swiper-parallax-scale="0.5" data-swiper-parallax-duration="1250">
-												<img src="img/photo/works/moda/xq-video1.png" alt="photo">
-												<a data-fancybox="gallery" data-no-swup href="https://www.youtube.com/embed/90kWyXBrJt8" class="orb-zoom"><img src="img/ui/play-button.svg" alt="zoom"></a>
-											</div>
-										</div>
-									</div>
-									<div class="orb-g-50 orb-sm-100">
-										<div class="orb-photo-frame orb-obj-2" data-swiper-parallax-y="60" data-swiper-parallax-scale="0.5" data-swiper-parallax-duration="1300">
-											<img src="img/photo/works/moda/xq-video2.png" alt="photo">
-											<a data-fancybox="gallery" data-no-swup href="https://www.youtube.com/embed/Sg-emAgwrPc" class="orb-zoom"><img src="img/ui/play-button.svg" alt="zoom"></a>
-										</div>
-									</div>
-									<div class="orb-g-20 orb-sm-100">
-										<div class="orb-photo-frame orb-obj-3" data-swiper-parallax-y="-100" data-swiper-parallax-scale="0.5" data-swiper-parallax-duration="1200">
-											<img src="img/photo/works/moda/xq-video3.png" alt="photo">
-											<a data-fancybox="gallery" data-no-swup href="https://www.youtube.com/embed/-AfcJUPUnFY" class="orb-zoom"><img src="img/ui/play-button.svg" alt="zoom"></a>
+											<img src="img/photo/works/audio/visual9.png" alt="photo">
+											<a data-fancybox="gallery" data-no-swup href="https://www.youtube.com/embed/UnYIR2M6SBw" class="orb-zoom"><img src="img/ui/play-button.svg" alt="zoom"></a>
 										</div>
 									</div>
 								</div>
@@ -205,7 +153,7 @@
 					</div>
 					<div class="orb-description">
 						<div class="orb-text">
-							<a href="moda.html">Voltar para <br><br><br>Moda </a>
+							<a href="autoral.html">Voltar para <br><br><br>Projetos <br><br> </a>
 							<span></span>
 						</div>
 						<div class="orb-nav-frame">
@@ -245,12 +193,12 @@
 						<div class="orb-g-70 orb-md-50 orb-sm-100">
 							<div class="rb-object-frame">
 								<div class="orb-photo-frame orb-obj-1">
-									<img src="img/photo/about/Elton-foto.png" alt="photo">
+									<img src="img/photo/39.jpg" alt="photo">
 								</div>
 								<div class="orb-position-fix">
 									<div class="orb-deco"></div>
 									<div class="orb-photo-frame orb-obj-2">
-										<img src="img/photo/about/elton-foto2.png" alt="photo">
+										<img src="img/photo/40.jpg" alt="photo">
 									</div>
 								</div>
 								<div class="orb-descr">
