--- a/portfolio-2.html
+++ b/portfolio-2.html
@@ -155,16 +155,16 @@
 								<div class="orb-grid orb-sm-reverse">
 									<div class="orb-g-30 orb-sm-100">
 										<div class="orb-position-fix">
-											<span class="orb-title-2"><a href="autoral.html">Veja mais -</a></span>
+											<span class="orb-title-2"><a href="audiovisual.html">Veja mais -</a></span>
 											<div class="orb-photo-frame orb-obj-2" data-swiper-parallax-y="100" data-swiper-parallax-scale="0.5" data-swiper-parallax-duration="1250">
-												<img src="img/photo/works/autoral/joia1.png" alt="photo">
+												<img src="img/photo/background/audiovisualmenor.jpg" alt="photo">
 											</div>
 										</div>
 									</div>
 									<div class="orb-g-70 orb-sm-100">
 										<div class="rb-object-frame">
 											<div class="orb-photo-frame orb-obj-1" data-swiper-parallax-y="-100" data-swiper-parallax-scale="0.5" data-swiper-parallax-duration="1300">
-												<img src="img/photo/works/autoral/joao6.png" alt="photo">
+												<img src="img/photo/background/audiovisualmaior.png" alt="photo">
 											</div>
 											<div class="orb-slide-caption" data-swiper-parallax-y="200" data-swiper-parallax-scale="0.5">
 												<h2>Audiovisual</h2>
