--- a/ubatuba.html
+++ b/ubatuba.html
@@ -76,63 +76,8 @@
 									<div class="orb-g-30 orb-sm-100">
 										<div class="orb-position-fix">
 											<div class="orb-slide-caption" data-swiper-parallax-y="120" data-swiper-parallax-scale="0.5">
-												<span>Viagens <br><b>São Tomé das Letras</b><br><br><a href="saotome.html" style="color: black;font-size: 20px; font-weight: 700;">Ver mais fotos -</a></span></div>
-											<div class="orb-photo-frame orb-obj-1" data-swiper-parallax-y="-100" data-swiper-parallax-scale="0.5" data-swiper-parallax-duration="1250">
-												<img src="img/photo/works/project-04/saotome4.png" alt="photo">
-												<a data-fancybox="gallery" data-no-swup href="img/photo/works/project-04/saotome4-extended.png" class="orb-zoom"><img src="img/ui/zoom.svg" alt="zoom"></a>
+												<span>Ubatuba<br><b>Elton</b><br>Portifólio<br></span>
 											</div>
-										</div>
-									</div>
-									<div class="orb-g-50 orb-sm-100">
-										<div class="orb-photo-frame orb-obj-2" data-swiper-parallax-y="60" data-swiper-parallax-scale="0.5" data-swiper-parallax-duration="1300">
-											<img src="img/photo/works/project-04/saotome5.png" alt="photo">
-											<a data-fancybox="gallery" data-no-swup href="img/photo/works/project-04/saotome5-extended.png" class="orb-zoom"><img src="img/ui/zoom.svg" alt="zoom"></a>
-										</div>
-									</div>
-									<div class="orb-g-20 orb-sm-100">
-										<div class="orb-photo-frame orb-obj-3" data-swiper-parallax-y="-100" data-swiper-parallax-scale="0.5" data-swiper-parallax-duration="1200">
-											<img src="img/photo/works/project-04/saotome6.png" alt="photo">
-											<a data-fancybox="gallery" data-no-swup href="img/photo/works/project-04/saotome6-extended.png" class="orb-zoom"><img src="img/ui/zoom.svg" alt="zoom"></a>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="swiper-slide">
-							<div class="orb-content" data-swiper-parallax="-200" data-swiper-parallax-opacity="0">
-								<div class="orb-grid">
-									<div class="orb-g-30 orb-sm-100">
-										<div class="orb-position-fix">
-											<div class="orb-slide-caption" data-swiper-parallax-y="120" data-swiper-parallax-scale="0.5">
-												<span>Viagens <br><b>Rio de Janeiro</b><br><br><a href="riodejaneiro.html" style="color: black;font-size: 20px; font-weight: 700;">Ver mais fotos -</a></span></div>
-											<div class="orb-photo-frame orb-obj-1" data-swiper-parallax-y="-100" data-swiper-parallax-scale="0.5" data-swiper-parallax-duration="1250">
-												<img src="img/photo/works/project-04/rio1.jpg" alt="photo">
-												<a data-fancybox="gallery" data-no-swup href="img/photo/works/project-04/rio1.jpg" class="orb-zoom"><img src="img/ui/zoom.svg" alt="zoom"></a>
-											</div>
-										</div>
-									</div>
-									<div class="orb-g-50 orb-sm-100">
-										<div class="orb-photo-frame orb-obj-2" data-swiper-parallax-y="60" data-swiper-parallax-scale="0.5" data-swiper-parallax-duration="1300">
-											<img src="img/photo/works/project-04/rio2.jpg" alt="photo">
-											<a data-fancybox="gallery" data-no-swup href="img/photo/works/project-04/rio2.jpg" class="orb-zoom"><img src="img/ui/zoom.svg" alt="zoom"></a>
-										</div>
-									</div>
-									<div class="orb-g-20 orb-sm-100">
-										<div class="orb-photo-frame orb-obj-3" data-swiper-parallax-y="-100" data-swiper-parallax-scale="0.5" data-swiper-parallax-duration="1200">
-											<img src="img/photo/works/project-04/rio3.jpg" alt="photo">
-											<a data-fancybox="gallery" data-no-swup href="img/photo/works/project-04/rio3.jpg" class="orb-zoom"><img src="img/ui/zoom.svg" alt="zoom"></a>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="swiper-slide">
-							<div class="orb-content" data-swiper-parallax="-200" data-swiper-parallax-opacity="0">
-								<div class="orb-grid">
-									<div class="orb-g-30 orb-sm-100">
-										<div class="orb-position-fix">
-											<div class="orb-slide-caption" data-swiper-parallax-y="120" data-swiper-parallax-scale="0.5">
-												<span>Viagens <br><b>Ubatuba</b><br><br><a href="ubatuba.html" style="color: black;font-size: 20px; font-weight: 700;">Ver mais fotos -</a></span></div>
 											<div class="orb-photo-frame orb-obj-1" data-swiper-parallax-y="-100" data-swiper-parallax-scale="0.5" data-swiper-parallax-duration="1250">
 												<img src="img/photo/works/project-04/ubatuba(1).jpg" alt="photo">
 												<a data-fancybox="gallery" data-no-swup href="img/photo/works/project-04/ubatuba(1).jpg" class="orb-zoom"><img src="img/ui/zoom.svg" alt="zoom"></a>
@@ -154,10 +99,38 @@
 								</div>
 							</div>
 						</div>
+                        <div class="swiper-slide">
+							<div class="orb-content" data-swiper-parallax="-200" data-swiper-parallax-opacity="0">
+								<div class="orb-grid">
+									<div class="orb-g-30 orb-sm-100">
+										<div class="orb-position-fix">
+											<div class="orb-photo-frame orb-obj-1" data-swiper-parallax-y="-100" data-swiper-parallax-scale="0.5" data-swiper-parallax-duration="1250">
+												<img src="img/photo/works/project-04/ubatuba(4).jpg" alt="photo">
+												<a data-fancybox="gallery" data-no-swup href="img/photo/works/project-04/ubatuba(4).jpg" class="orb-zoom"><img src="img/ui/zoom.svg" alt="zoom"></a>
+											</div>
+										</div>
+									</div>
+									<div class="orb-g-50 orb-sm-100">
+										<div class="orb-photo-frame orb-obj-2" data-swiper-parallax-y="60" data-swiper-parallax-scale="0.5" data-swiper-parallax-duration="1300">
+											<img src="img/photo/works/project-04/ubatuba(5).jpg" alt="photo">
+											<a data-fancybox="gallery" data-no-swup href="img/photo/works/project-04/ubatuba(5).jpg" class="orb-zoom"><img src="img/ui/zoom.svg" alt="zoom"></a>
+										</div>
+									</div>
+									<div class="orb-g-20 orb-sm-100">
+										<div class="orb-photo-frame orb-obj-3" data-swiper-parallax-y="-100" data-swiper-parallax-scale="0.5" data-swiper-parallax-duration="1200">
+											<img src="img/photo/works/project-04/ubatuba.jpg" alt="photo">
+											<a data-fancybox="gallery" data-no-swup href="img/photo/works/project-04/ubatuba.jpg" class="orb-zoom"><img src="img/ui/zoom.svg" alt="zoom"></a>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						
+						
 					</div>
 					<div class="orb-description">
 						<div class="orb-text">
-							<a href="portfolio-2.html">Voltar para <br><br><br>Projetos </a>
+							<a href="viagens.html">Voltar para <br><br><br>Viagens</a>
 							<span></span>
 						</div>
 						<div class="orb-nav-frame">
@@ -197,19 +170,19 @@
 						<div class="orb-g-70 orb-md-50 orb-sm-100">
 							<div class="rb-object-frame">
 								<div class="orb-photo-frame orb-obj-1">
-									<img src="img/photo/39.jpg" alt="photo">
+									<img src="img/photo/39.png" alt="photo">
 								</div>
 								<div class="orb-position-fix">
 									<div class="orb-deco"></div>
 									<div class="orb-photo-frame orb-obj-2">
-										<img src="img/photo/40.jpg" alt="photo">
+										<img src="img/photo/40.png" alt="photo">
 									</div>
 								</div>
 								<div class="orb-descr">
 									<div class="orb-descr-title">
 										<div>Menu</div>
 										<div class="orb-line"></div>
-									</div>					
+									</div>
 									<a href="https://www.instagram.com/eltinmoura/" target="_blank" data-no-swup><img src="img/ui/instagram-2.svg" alt="Instagram"></a>
 									<div class="monquei"  style="margin-top: 20px;">
 										<a href="https://www.monqueisites.com.br/" style="font-size: 11px; color: black; font-family: 'Montserrat';">Feito com muito ❤️ pela Monquei -<br> A equipe n°1 de Sites 🐵</a>
