--- a/pedetruco.html
+++ b/pedetruco.html
@@ -210,28 +210,52 @@
 									<div class="orb-g-30 orb-sm-100">
 										<div class="orb-position-fix">										
 											<div class="orb-photo-frame orb-obj-1" data-swiper-parallax-y="-100" data-swiper-parallax-scale="0.5" data-swiper-parallax-duration="1250">
-												<img src="img/photo/works/produtos/PéDetruco/pedetruco16.png" alt="photo">
-												<a data-fancybox="gallery" data-no-swup href="img/photo/works/produtos/PéDetruco/pedetruco16.png" class="orb-zoom"><img src="img/ui/zoom.svg" alt="zoom"></a>
+												<img src="img/photo/works/produtos/PéDetruco/pedetrucovideo-1.png" alt="photo">
+												<a data-fancybox="gallery" data-no-swup href="https://www.youtube.com/embed/CtgEJSB2hy8" class="orb-zoom"><img src="img/ui/play-button.svg" alt="zoom"></a>
 											</div>
 										</div>
 									</div>
 									<div class="orb-g-50 orb-sm-100">
 										<div class="orb-photo-frame orb-obj-2" data-swiper-parallax-y="60" data-swiper-parallax-scale="0.5" data-swiper-parallax-duration="1300">
-											<img src="img/photo/works/produtos/PéDetruco/pedetruco17.png" alt="photo">
-											<a data-fancybox="gallery" data-no-swup href="https://www.youtube.com/embed/vZ2a2I1gQlQ" class="orb-zoom"><img src="img/ui/play-button.svg" alt="zoom"></a>
-											<a data-fancybox="gallery" data-no-swup href="https://www.youtube.com/embed/vZ2a2I1gQlQ" class="orb-zoom"><img src="img/ui/play-button.svg" alt="zoom"></a>
+											<img src="img/photo/works/produtos/PéDetruco/pedetrucovideo-2.png" alt="photo">
+											<a data-fancybox="gallery" data-no-swup href="https://www.youtube.com/embed/lWkpygdH1w0" class="orb-zoom"><img src="img/ui/play-button.svg" alt="zoom"></a>
 										</div>
 									</div>
 									<div class="orb-g-20 orb-sm-100">
 										<div class="orb-photo-frame orb-obj-3" data-swiper-parallax-y="-100" data-swiper-parallax-scale="0.5" data-swiper-parallax-duration="1200">
-											<img src="img/photo/works/produtos/PéDetruco/pedetruco18.png" alt="photo">
-											<a data-fancybox="gallery" data-no-swup href="img/photo/works/produtos/PéDetruco/pedetruco18-extended.png" class="orb-zoom"><img src="img/ui/zoom.svg" alt="zoom"></a>
+											<img src="img/photo/works/produtos/PéDetruco/pedetrucovideo-3.png" alt="photo">
+											<a data-fancybox="gallery" data-no-swup href="https://www.youtube.com/embed/vZ2a2I1gQlQ" class="orb-zoom"><img src="img/ui/play-button.svg" alt="zoom"></a>
 										</div>
 									</div>
 								</div>
 							</div>
 						</div>
-						
+						<div class="swiper-slide">
+							<div class="orb-content" data-swiper-parallax="-200" data-swiper-parallax-opacity="0">
+								<div class="orb-grid">
+									<div class="orb-g-30 orb-sm-100">
+										<div class="orb-position-fix">										
+											<div class="orb-photo-frame orb-obj-1" data-swiper-parallax-y="-100" data-swiper-parallax-scale="0.5" data-swiper-parallax-duration="1250">
+												<img src="img/photo/works/produtos/PéDetruco/pedetrucovideo-4.png" alt="photo">
+												<a data-fancybox="gallery" data-no-swup href="https://www.youtube.com/embed/f4RisM-qmA0" class="orb-zoom"><img src="img/ui/play-button.svg" alt="zoom"></a>
+											</div>
+										</div>
+									</div>
+									<div class="orb-g-50 orb-sm-100">
+										<div class="orb-photo-frame orb-obj-2" data-swiper-parallax-y="60" data-swiper-parallax-scale="0.5" data-swiper-parallax-duration="1300">
+											<img src="img/photo/works/produtos/PéDetruco/pedetrucovideo-5.png" alt="photo">
+											<a data-fancybox="gallery" data-no-swup href="https://www.youtube.com/embed/0eFN4ljGNjI" class="orb-zoom"><img src="img/ui/play-button.svg" alt="zoom"></a>
+										</div>
+									</div>
+									<div class="orb-g-20 orb-sm-100">
+										<div class="orb-photo-frame orb-obj-3" data-swiper-parallax-y="-100" data-swiper-parallax-scale="0.5" data-swiper-parallax-duration="1200">
+											<img src="img/photo/works/produtos/PéDetruco/pedetrucovideo-6.png" alt="photo">
+											<a data-fancybox="gallery" data-no-swup href="https://www.youtube.com/embed/tkK-8gNnV4w" class="orb-zoom"><img src="img/ui/play-button.svg" alt="zoom"></a>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
 					<div class="orb-description">
 						<div class="orb-text">
