--- a/about-1.html
+++ b/about-1.html
@@ -109,7 +109,7 @@
 							<div class="orb-line"></div>
 							<a href="https://www.instagram.com/eltinmoura/" target="_blank" data-no-swup><img src="img/ui/instagram-1.svg" alt="Instagram"></a>
 						</div>
-						<a href="mailto:produtor.elton.m@gmail.com" class="orb-mail" data-no-swup>Produtor.elton.m@gmail.com</a>
+						<a href="mailto:produtor@eltonmoura.com.br" class="orb-mail" data-no-swup>produtor@eltonmoura.com.br</a>
 					</div>
 				</div>
 
