--- a/contact-3.html
+++ b/contact-3.html
@@ -77,7 +77,7 @@
 						<div class="orb-g-60 orb-sm-100">
 							<div class="orb-form-frame">
 								<div class="orb-form-title">
-									<h2>Quer deixar sua presença no mundo?<br> Vamos contar essa história juntos! Me envie um email ou<br><button href="https://api.whatsapp.com/send/?phone=5512991807596&text=Ol%C3%A1%21+Fiquei+muito+interessado+e+quero+saber+mais%21&type=phone_number&app_absent=0" target="_blank" class="orb-whatsapp" onclick="novaAba()" style="background-color: transparent; border: none;">Clique e me chame no<img src="img/ui/whatsapp.svg" alt="Instagram" style="width: 30px;">Whatsapp</button></h2>
+									<h2>Quer deixar sua presença no mundo?<br> Vamos contar essa história juntos! Me envie um email ou<br><button href="https://api.whatsapp.com/send/?phone=5512991807596&text=Ol%C3%A1%21+Fiquei+muito+interessado+e+quero+saber+mais%21&type=phone_number&app_absent=0" target="_blank" class="orb-whatsapp" onclick="novaAba()" style="background-color: black; border: none; font-size: 15px; color: antiquewhite; margin-top: 10px; border-radius: 15px; padding: 5px;">Clique e me chame no<img src="img/ui/whatsapp.svg" alt="Instagram" style="width: 30px;">Whatsapp</button></h2>
 									
 									<div class="orb-line"></div>
 								</div>
