--- a/VIK.html
+++ b/VIK.html
@@ -111,8 +111,8 @@
 									</div>
 									<div class="orb-g-50 orb-sm-100">
 										<div class="orb-photo-frame orb-obj-2" data-swiper-parallax-y="60" data-swiper-parallax-scale="0.5" data-swiper-parallax-duration="1300">
-											<img src="img/photo/works/publi/vik5.png" alt="photo">
-											<a data-fancybox="gallery" data-no-swup href="https://www.youtube.com/embed/2kTwhuonljk" class="orb-zoom"><img src="img/ui/play-button.svg" alt="zoom"></a>
+											<a data-fancybox="gallery" data-no-swup href="https://www.youtube.com/embed/2kTwhuonljk"><img src="img/photo/works/publi/vik5.png" alt="photo"></a>
+											
 										</div>
 									</div>
 									<div class="orb-g-20 orb-sm-100">
