--- a/about-1.html
+++ b/about-1.html
@@ -74,7 +74,7 @@
 						<div class="orb-g-40 orb-sm-100">
 							<div class="rb-object-frame">
 								<div class="orb-photo-frame orb-obj-1">
-									<img src="img/photo/about/elton-foto-perfil.png" alt="photo">
+									<img src="img/photo/about/elton-foto-perfil.jpg" alt="photo">
 								</div>
 							</div>
 						</div>
