--- a/contact-3.html
+++ b/contact-3.html
@@ -117,7 +117,7 @@
 						<div class="orb-g-40 orb-sm-100">
 							<div class="rb-object-frame">
 								<div class="orb-photo-frame orb-obj-1">
-									<img src="img/photo/about/camera.png" alt="photo">
+									<img src="img/photo/about/camera-menor.png" alt="photo">
 								</div>
 								<div class="orb-deco-1"></div>
 								<div class="orb-deco-2"></div>
@@ -161,7 +161,7 @@
 						<div class="orb-g-33 orb-lg-50 orb-sm-100">
 							<div class="rb-object-frame">
 								<div class="orb-photo-frame orb-obj-1">
-									<img src="img/photo/about/camera.png" alt="photo">
+									<img src="img/photo/about/camera-menor.png" alt="photo">
 								</div>
 							</div>
 						</div>
