--- a/joia.html
+++ b/joia.html
@@ -112,8 +112,8 @@
 									</div>
 									<div class="orb-g-50 orb-sm-100">
 										<div class="orb-photo-frame orb-obj-2" data-swiper-parallax-y="60" data-swiper-parallax-scale="0.5" data-swiper-parallax-duration="1300">
-											<img src="img/photo/works/autoral/joia5.png" alt="photo">
-											<a data-fancybox="gallery" data-no-swup href="https://www.youtube.com/embed/RLL7NXgHKhc" class="orb-zoom"><img src="img/ui/play-button.svg" alt="zoom"></a>
+											
+											<a data-fancybox="gallery" data-no-swup href="https://www.youtube.com/embed/RLL7NXgHKhc"><img src="img/photo/works/autoral/joia5.png" alt="photo"></a>
 										</div>
 									</div>
 									<div class="orb-g-20 orb-sm-100">
@@ -168,12 +168,12 @@
 						<div class="orb-g-70 orb-md-50 orb-sm-100">
 							<div class="rb-object-frame">
 								<div class="orb-photo-frame orb-obj-1">
-									<img src="img/photo/39.jpg" alt="photo">
+									<img src="img/photo/about/Elton-foto.png" alt="photo">
 								</div>
 								<div class="orb-position-fix">
 									<div class="orb-deco"></div>
 									<div class="orb-photo-frame orb-obj-2">
-										<img src="img/photo/40.jpg" alt="photo">
+										<img src="img/photo/about/elton-foto2.png" alt="photo">
 									</div>
 								</div>
 								<div class="orb-descr">
