--- a/broncoffe.html
+++ b/broncoffe.html
@@ -211,21 +211,18 @@
 									<div class="orb-g-30 orb-sm-100">
 										<div class="orb-position-fix">
 											<div class="orb-photo-frame orb-obj-1" data-swiper-parallax-y="-100" data-swiper-parallax-scale="0.5" data-swiper-parallax-duration="1250">
-												<img src="img/photo/works/produtos/bron/bron-video1.png" alt="photo">
-												<a data-fancybox="gallery" data-no-swup href="https://www.youtube.com/embed/XQA65Jhl6Ww" class="orb-zoom"><img src="img/ui/play-button.svg" alt="zoom"></a>
+												<a data-fancybox="gallery" data-no-swup href="https://www.youtube.com/embed/XQA65Jhl6Ww"><img src="img/photo/works/produtos/bron/bron-video1.png" alt="photo"></a>
 											</div>
 										</div>
 									</div>
 									<div class="orb-g-50 orb-sm-100">
 										<div class="orb-photo-frame orb-obj-2" data-swiper-parallax-y="60" data-swiper-parallax-scale="0.5" data-swiper-parallax-duration="1300">
-											<img src="/img/photo/works/produtos/bron/bron-video2.png" alt="photo">
-											<a data-fancybox="gallery" data-no-swup href="https://www.youtube.com/embed/RWmWtrXhvEE" class="orb-zoom"><img src="img/ui/play-button.svg" alt="zoom"></a>
+											<a data-fancybox="gallery" data-no-swup href="https://www.youtube.com/embed/RWmWtrXhvEE"><img src="/img/photo/works/produtos/bron/bron-video2.png" alt="photo"></a>		
 										</div>
 									</div>
 									<div class="orb-g-20 orb-sm-100">
 										<div class="orb-photo-frame orb-obj-3" data-swiper-parallax-y="-100" data-swiper-parallax-scale="0.5" data-swiper-parallax-duration="1200">
-											<img src="img/photo/works/produtos/bron/bron-video3.png" alt="photo">
-											<a data-fancybox="gallery" data-no-swup href="https://www.youtube.com/embed/7QxoNveFiLk" class="orb-zoom"><img src="img/ui/play-button.svg" alt="zoom"></a>
+											<a data-fancybox="gallery" data-no-swup href="https://www.youtube.com/embed/7QxoNveFiLk"><img src="img/photo/works/produtos/bron/bron-video3.png" alt="photo"></a>
 										</div>
 									</div>
 
@@ -238,21 +235,18 @@
 									<div class="orb-g-30 orb-sm-100">
 										<div class="orb-position-fix">
 											<div class="orb-photo-frame orb-obj-1" data-swiper-parallax-y="-100" data-swiper-parallax-scale="0.5" data-swiper-parallax-duration="1250">
-												<img src="img/photo/works/produtos/bron/bron-video4.png" alt="photo">
-												<a data-fancybox="gallery" data-no-swup href="https://www.youtube.com/embed/QZeoOQxh30U" class="orb-zoom"><img src="img/ui/play-button.svg" alt="zoom"></a>
+												<a data-fancybox="gallery" data-no-swup href="https://www.youtube.com/embed/QZeoOQxh30U"><img src="img/photo/works/produtos/bron/bron-video4.png" alt="photo"></a>
 											</div>
 										</div>
 									</div>
 									<div class="orb-g-50 orb-sm-100">
 										<div class="orb-photo-frame orb-obj-2" data-swiper-parallax-y="60" data-swiper-parallax-scale="0.5" data-swiper-parallax-duration="1300">
-											<img src="/img/photo/works/produtos/bron/bron-video5.png" alt="photo">
-											<a data-fancybox="gallery" data-no-swup href="https://www.youtube.com/embed/uFjyhk-UEis" class="orb-zoom"><img src="img/ui/play-button.svg" alt="zoom"></a>
+											<a data-fancybox="gallery" data-no-swup href="https://www.youtube.com/embed/uFjyhk-UEis"><img src="/img/photo/works/produtos/bron/bron-video5.png" alt="photo"></a>
 										</div>
 									</div>
 									<div class="orb-g-20 orb-sm-100">
 										<div class="orb-photo-frame orb-obj-3" data-swiper-parallax-y="-100" data-swiper-parallax-scale="0.5" data-swiper-parallax-duration="1200">
-											<img src="img/photo/works/produtos/bron/bron-video6.png" alt="photo">
-											<a data-fancybox="gallery" data-no-swup href="https://www.youtube.com/embed/fOmA8kEq6WY" class="orb-zoom"><img src="img/ui/play-button.svg" alt="zoom"></a>
+											<a data-fancybox="gallery" data-no-swup href="https://www.youtube.com/embed/fOmA8kEq6WY"><img src="img/photo/works/produtos/bron/bron-video6.png" alt="photo"></a>
 										</div>
 									</div>
 
