--- a/permitase.html
+++ b/permitase.html
@@ -111,8 +111,8 @@
 									</div>
 									<div class="orb-g-50 orb-sm-100">
 										<div class="orb-photo-frame orb-obj-2" data-swiper-parallax-y="60" data-swiper-parallax-scale="0.5" data-swiper-parallax-duration="1300">
-											<img src="img/photo/works/moda/permitase5.png" alt="photo">
-											<a data-fancybox="gallery" data-no-swup href="https://www.youtube.com/embed/hR14KTzZMR4" class="orb-zoom"><img src="img/ui/play-button.svg" alt="zoom"></a>
+											<a data-fancybox="gallery" data-no-swup href="https://www.youtube.com/embed/hR14KTzZMR4"><img src="img/photo/works/moda/permitase5.png" alt="photo"></a>
+											
 										</div>
 									</div>
 									<div class="orb-g-20 orb-sm-100">
@@ -128,7 +128,7 @@
 					</div>
 					<div class="orb-description">
 						<div class="orb-text">
-							<a href="moda.html">Voltar para <br><br><br>Produtos </a>
+							<a href="moda.html">Voltar para <br><br><br>Moda </a>
 							<span></span>
 						</div>
 						<div class="orb-nav-frame">
