--- a/publicidade.html
+++ b/publicidade.html
@@ -225,12 +225,12 @@
 						<div class="orb-g-70 orb-md-50 orb-sm-100">
 							<div class="rb-object-frame">
 								<div class="orb-photo-frame orb-obj-1">
-									<img src="img/photo/39.jpg" alt="photo">
+									<img src="img/photo/about/Elton-foto.png" alt="photo">
 								</div>
 								<div class="orb-position-fix">
 									<div class="orb-deco"></div>
 									<div class="orb-photo-frame orb-obj-2">
-										<img src="img/photo/40.jpg" alt="photo">
+										<img src="img/photo/about/elton-foto2.png" alt="photo">
 									</div>
 								</div>
 								<div class="orb-descr">
